[package]
name = "bulletml"
version = "0.1.0"
authors = ["Ben Boeckel <mathstuf@gmail.com>"]
readme = "README.md"
license = "BSD-2-Clause"
repository = "https://github.com/mathstuf/rust-bulletml"
homepage = "https://github.com/mathstuf/rust-bulletml"
edition = "2018"

[dependencies]
peg = "~0.7"
thiserror = "^1"
